fix: 자바 버전 변경